--- a/content-creater.html
+++ b/content-creater.html
@@ -559,8 +559,8 @@
 
                         <div class="row">
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                <div class="service__details__planning__text">
-                                    <div class="service__details__planning__heading">
+                                <div class="service__details__planning__text" data-aos="fade-up" data-aos-duration="1500">
+                                    <div class="service__details__planning__heading" data-aos="fade-up" data-aos-duration="1500">
                                         <h3>Understanding Your Vision</h3>
                                     </div>
                                     <p>To do this, we first carry out a comprehensive analysis of your industry, target
@@ -569,8 +569,8 @@
                                         brand.
                                     </p>
                                 </div>
-                                <div class="service__details__planning__text">
-                                    <div class="service__details__planning__heading">
+                                <div class="service__details__planning__text" data-aos="fade-up" data-aos-duration="1500">
+                                    <div class="service__details__planning__heading" data-aos="fade-up" data-aos-duration="1500">
                                         <h3>Creative Collaboration</h3>
                                     </div>
                                     <p>Customer care is a central aspect of our team’s function, especially as we help
@@ -580,8 +580,8 @@
                                         content
                                         is in line with the brand you wish to convey and communicates this clearly.</p>
                                 </div>
-                                <div class="service__details__planning__text">
-                                    <div class="service__details__planning__heading">
+                                <div class="service__details__planning__text" data-aos="fade-up" data-aos-duration="1500">
+                                    <div class="service__details__planning__heading" data-aos="fade-up" data-aos-duration="1500">
                                         <h3>Creative Content Campaigns</h3>
                                     </div>
                                     <p>Any great content must create unique ways of presenting it to the public. Whether
@@ -600,12 +600,12 @@
 
                 </div>
                 <div class="row g-4 horizontal-card">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/SEO/Keyword Research.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -618,12 +618,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/SEO/On-Page SEO.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -636,12 +636,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service//SEO/Technical SEO.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -655,12 +655,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/SEO/Content Optimization.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -674,12 +674,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/SEO/Link Building.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -692,12 +692,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/SEO/Analytics and Reporting.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -714,26 +714,26 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="service__details__planning__heading mb-4">
+                        <div class="service__details__planning__heading mb-4" data-aos="fade-up" data-aos-duration="1500">
                             <h2>The Digital Minds On Approach</h2>
                         </div>
-                        <div class="service__details__planning__text">
-                            <div class="service__details__planning__heading">
+                        <div class="service__details__planning__text" data-aos="fade-up" data-aos-duration="1500">
+                            <div class="service__details__planning__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h3>Focus on Quality</h3>
                             </div>
                             <p>Digital Minds On values quality, we do our best to provide only the highest level of
                                 services to our clients. It must be noted that all our work goes through a strict
                                 editorial check to meet maximally professional standards.</p>
                         </div>
-                        <div class="service__details__planning__text">
-                            <div class="service__details__planning__heading">
+                        <div class="service__details__planning__text" data-aos="fade-up" data-aos-duration="1500">
+                            <div class="service__details__planning__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h3>Data-Driven Insights</h3>
                             </div>
                             <p>Analytics help improve and transform content marketing to reach the necessary engagement
                                 and conversion goals for all your content.</p>
                         </div>
-                        <div class="service__details__planning__text">
-                            <div class="service__details__planning__heading">
+                        <div class="service__details__planning__text" data-aos="fade-up" data-aos-duration="1500">
+                            <div class="service__details__planning__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h2>Why Choose Digital Minds On?</h2>
                             </div>
                             <p></b>Expert Team:</b> We have writers, designers, and strategists who all work and bring
@@ -745,8 +745,8 @@
 
                         </div>
 
-                        <div class="service__details__planning__text">
-                            <div class="service__details__planning__heading">
+                        <div class="service__details__planning__text" data-aos="fade-up" data-aos-duration="1500">
+                            <div class="service__details__planning__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h2>Conclusion</h2>
                             </div>
                             <p>Digital Minds On have come across the best content can indeed revolutionise companies. We
