--- a/network-services.html
+++ b/network-services.html
@@ -577,12 +577,12 @@
                     </div>
                 </div>
                 <div class="row g-4 horizontal-card">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/IT Specialist/Technical Support.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -595,12 +595,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/IT Specialist/Network Administration.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -613,12 +613,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/IT Specialist/System Administration.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -631,12 +631,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/IT Specialist/Security Management.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -651,12 +651,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/IT Specialist/Database Management.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -669,12 +669,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
