--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -573,12 +573,12 @@
                 </div>
                 <!-- card -->
                 <div class="row g-4 horizontal-card">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/WordPress Specialist/Theme Development.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -592,12 +592,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/WordPress Specialist/Plugin Development.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -610,12 +610,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/WordPress Specialist/Website Optimization.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -629,12 +629,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/Content cretor/Content Creation.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -649,12 +649,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/WordPress Specialist/Security Management.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -668,12 +668,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/WordPress Specialist/SEO Optimization.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
