button speeling correct

--- a/Shoaib.html
+++ b/Shoaib.html
@@ -198,7 +198,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="contact">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET A FREE QUOTE</a>
                                     </div>
                                 </div>
                             </div>
