--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -214,7 +214,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="contact">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET A FREE QUOTE</a>
                                     </div>
                                 </div>
                             </div>
@@ -511,7 +511,7 @@
                                             <div class="service__details__planning__heading">
                                                 <h3>Outsource Digital Marketing To Digital Minds On</h3>
                                             </div>
-                                            <div class="service__details__planning__text">
+                                            <div class="service__details__planning__text" data-aos="fade-up" data-aos-duration="1500">
                                                 <p>Digital Minds On represents our unwavering commitment to excellence
                                                     in digital marketing. We embrace challenges, tackling complex client
                                                     needs with precision and passion. From strategy to execution, our
@@ -524,7 +524,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-12 mt-3">
+                                    <div class="col-md-12 mt-3" data-aos="fade-up" data-aos-duration="1500">
                                         <div class="service__details__planning__heading">
                                             <h2>Crafting Content Marketing That Engages Your Audience and Turns Leads
                                                 into Loyal Customers</h2>
@@ -550,7 +550,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 mt-3">
+                    <div class="col-md-12 mt-3" data-aos="fade-up" data-aos-duration="1500">
                         <div class="service__details__planning__heading">
                             <h2>Boost Engagement Through Expert Social Media Marketing Strategies</h2>
                         </div>
