--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -213,7 +213,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="contact">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET A FREE QUOTE</a>
                                     </div>
                                 </div>
                             </div>
