--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                                 style="will-change: transform; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);"
                                 alt="Healthcare professionals" class="img-fluid">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8" data-aos="fade-up" data-aos-duration="2000">
                             <h1 class="mt-3 mt-md-0 aligned-text">About By Digital Minds On</h1>
                             <p class="mt-2">
                                 Digital Minds On doesn’t just develop software but solutions that revolutionize an
@@ -507,13 +507,13 @@
             <div class="service-page">
                 <div class="container mt-5">
                     <div class=" row service-section">
-                        <div class="col-md-6">
+                        <div class="col-md-6" data-aos="fade-up" data-aos-duration="2000">
                             <h6>Our Services</h6>
                             <h3 class="mb-3" style=" font-size: 43px; line-height: 50px;">Premier Incredible Services by
                                 Digital Minds On Providers</h3>
 
                         </div>
-                        <div class="col-md-6 text-center mt-4 mt-md-0">
+                        <div class="col-md-6 text-center mt-4 mt-md-0" data-aos="fade-up" data-aos-duration="2000">
                             <p class="mt-2">
                                 Digital Minds On specializes in delivering cutting-edge software development solutions
                                 tailored to meet the unique needs of modern businesses. Our team of experienced
@@ -1686,9 +1686,6 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script>
-        AOS.init();
-    </script>
     <!-- back to top -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
