--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FAQ | Software Company | Digital Minds On</title>
+    <title>FAQ | Software Company | Digital Minds On </title>
     <meta name="description"
         content="We offer custom software, web, and mobile app development, UI/UX design, and consulting services tailored to meet your business needs.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,18 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-
+    <!-- title scrollbar -->
+    <script>
+        // Text for the title
+        let titleText = " FAQ | Software Company | Digital Minds On ";
+        let index = 0;
+        function scrollTitle() {
+            document.title = titleText.slice(index) + titleText.slice(0, index);
+            index = (index + 1) % titleText.length;
+        }
+        setInterval(scrollTitle, 200); 
+    </script>
+    <!-- title scrollbar -->
 
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
