--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                                     and Africa , ranging from startups to Fortune 500 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact">GET FREE QUATE</a>
+                                                <a class="default__button" href="contact">GET A FREE QUOTE</a>
                                             </div>
                                         </div>
                                     </div>
@@ -390,7 +390,7 @@
                                                     from startups to Fortune 500 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact">GET FREE QUATE</a>
+                                                <a class="default__button" href="contact">GET A FREE QUOTE</a>
                                             </div>
                                         </div>
                                     </div>
@@ -420,7 +420,7 @@
                                                 </p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact">GET FREE QUATE</a>
+                                                <a class="default__button" href="contact">GET A FREE QUOTE</a>
                                             </div>
                                         </div>
                                     </div>
