socal icon fixed

--- a/what-is-web-development.html
+++ b/what-is-web-development.html
@@ -564,7 +564,7 @@
                                 <h2>What is Web Development?</h2>
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p><b><a href="#">Web development refers to the construction and management of online
+                                <p>Web development refers to the construction and management of online
                                             sites and programs known as web apps. It captures all aspects of web
                                             technology; tools, and techniques that are used in building both the
                                             interface and back end of Web based solutions that is both usable and
@@ -715,20 +715,25 @@
                                     </div>
 
                                     <li>
-                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
-                                                    class="icofont-facebook"></i></span></a>
+                                        <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
+                                            target="_blank">
+                                            <i class="icofont-facebook"></i>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
-                                                    class="icofont-twitter"></i></span></a>
+                                        <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                            <i class="icofont-instagram"></i>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
-                                                    class="icofont-skype"></i></span></a>
+                                        <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
+                                                class="icofont-skype"></i></a>
                                     </li>
                                     <li>
-                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
-                                                    class="icofont-linkedin"></i></span></a>
+                                        <a href="https://www.linkedin.com/company/digital-minds-on"
+                                            target="_blank">
+                                            <i class="icofont-linkedin"></i>
+                                        </a>
                                     </li>
 
                                 </ul>
