--- a/what-is-mobile-application-development.html
+++ b/what-is-mobile-application-development.html
@@ -873,20 +873,24 @@
                                     </div>
 
                                     <li>
-                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
-                                                    class="icofont-facebook"></i></span></a>
+                                        <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
+                                            target="_blank">
+                                            <i class="icofont-facebook"></i>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
-                                                    class="icofont-twitter"></i></span></a>
+                                        <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                            <i class="icofont-instagram"></i>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
-                                                    class="icofont-skype"></i></span></a>
+                                        <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
+                                                class="icofont-skype"></i></a>
                                     </li>
                                     <li>
-                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
-                                                    class="icofont-linkedin"></i></span></a>
+                                        <a href="https://www.linkedin.com/company/digital-minds-on" target="_blank">
+                                            <i class="icofont-linkedin"></i>
+                                        </a>
                                     </li>
 
                                 </ul>
