--- a/what-is-software-development.html
+++ b/what-is-software-development.html
@@ -916,9 +916,6 @@
                                 customers .
                             </p>
                         </div>
-
-
-
                         <div class="blog__details__social__icon" data-aos="fade-up" data-aos-duration="1500">
                             <ul>
                                 <div class="blog__details__share">
@@ -926,7 +923,7 @@
                                 </div>
 
                                 <li>
-                                    <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                    <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
                                         target="_blank">
                                         <i class="icofont-facebook"></i>
                                     </a>
@@ -945,7 +942,6 @@
                                         <i class="icofont-linkedin"></i>
                                     </a>
                                 </li>
-
                             </ul>
                         </div>
 
