--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                             </div>
                             <div class="video__button">
                                 <a class="video__card--link glightbox" data-gallery="video_popup"
-                                    href="https://www.youtube.com/watch?v=gLb2Gbo_bbs">
+                                    href="https://www.youtube.com/watch?v=IqTjc1vH8Dw&feature=youtu.be">
                                     <svg width="13" height="15" viewBox="0 0 13 15" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M13 7.5L0.250002 14.8612L0.250003 0.138783L13 7.5Z" fill="#F8422E" />
